# AgenticForecast

./: .gitignore  README.md
forecast-critic/: main.py  pyproject.toml
forecast-critic/forecast_critic/: config.py  llm_provider.py
forecast-critic/forecast_critic/committee/: forecasters.py  pipeline.py  selector.py
forecast-critic/forecast_critic/critic/: llm.py
forecast-critic/forecast_critic/data/: m5.py  perturbations.py  promotions.py  synthetic.py
forecast-critic/forecast_critic/experiments/: committee_experiment.py  exogenous_experiment.py  m5_experiment.py  surgeon_experiment.py  synthetic_experiment.py
forecast-critic/forecast_critic/metrics/: evaluation.py
forecast-critic/forecast_critic/prompts/: templates.py
forecast-critic/forecast_critic/surgeon/: codegen.py  corrections.py  diagnosis.py  pipeline.py
forecast-critic/forecast_critic/visualization/: plots.py
